Corrected annoying issue with losing data during drag and drop

--- a/src/assets/i18n/system-en.json
+++ b/src/assets/i18n/system-en.json
@@ -1,35 +1,5 @@
 {
-	"Add Rule": "Add Rule",
-	"Add Condition": "Add Condition",
-	"Reorder Options": "Reorder Options",
-	"Edit Options": "Edit Options",
-	"Edit": "Edit",
-	"Add Option": "Add Option",
-	"Key / Value": "Key / Value",
-	"Label": "Label",
-	"No Options Configured": "No Options Configured",
-	"Edit Fields": "Edit Fields",
-	"Reorder Fields": "Reorder Fields",
-	"Position": "Position",
-	"Category": "Category",
-	"Type": "Type",
-	"Edit Field Buttons Column": "Edit Field Buttons Column",
-	"Delete, Preview, and Edit buttons": "Delete, Preview, and Edit buttons",
-	"Add Field": "Add Field",
-	"No Fields Configured": "No Fields Configured",
-	"Edit Pages": "Edit Pages",
-	"Edit Form": "Edit Form",
-	"Contains errors": "Contains errors",
-	"Add Page": "Add Page",
-	"Add Token": "Add Token",
-	"Name": "Name",
-	"TOKEN NOT CONFIGURED": "TOKEN NOT CONFIGURED",
-	"Submit": "Submit",
-	"Continue": "Continue",
-	"Revert & Close": "Revert & Close",
-	"Save & Close": "Save & Close",
-	"Close": "Close",
-	"Select Operator": "Select Operator",
+	"Back": "Back",
 	"yyyy": "yyyy",
 	"Year": "Year",
 	"mm": "mm",
@@ -38,22 +8,53 @@
 	"Day": "Day",
 	"Navigate to Page": "Navigate to Page",
 	"Previous": "Previous",
+	"Continue": "Continue",
+	"Submit": "Submit",
 	"Errors on page(s): {{pages}}": "Errors on page(s): {{pages}}",
-	"Back": "Back",
 	"Add": "Add",
+	"Contains errors": "Contains errors",
 	"Remove": "Remove",
 	"Clear Selection": "Clear Selection",
-	"Confirmation": "Confirmation",
-	"Are you sure you want to remove this field?": "Are you sure you want to remove this field?",
-	"No": "No",
-	"Yes": "Yes",
-	"Are you sure you want to remove this page?": "Are you sure you want to remove this page?",
+	"Add Dependency": "Add Dependency",
+	"Add Rule": "Add Rule",
+	"Add Condition": "Add Condition",
+	"Edit Pages": "Edit Pages",
+	"Edit Form": "Edit Form",
+	"Add Page": "Add Page",
+	"Position": "Position",
+	"Label": "Label",
+	"Reorder Options": "Reorder Options",
+	"Edit Options": "Edit Options",
+	"Edit": "Edit",
+	"Add Option": "Add Option",
+	"Key / Value": "Key / Value",
+	"No Options Configured": "No Options Configured",
+	"Edit Fields": "Edit Fields",
+	"Reorder Fields": "Reorder Fields",
+	"Category": "Category",
+	"Type": "Type",
+	"Edit Field Buttons Column": "Edit Field Buttons Column",
+	"Delete, Preview, and Edit buttons": "Delete, Preview, and Edit buttons",
+	"Add Field": "Add Field",
+	"No Fields Configured": "No Fields Configured",
+	"Add Token": "Add Token",
+	"Name": "Name",
+	"TOKEN NOT CONFIGURED": "TOKEN NOT CONFIGURED",
+	"Revert & Close": "Revert & Close",
+	"Save & Close": "Save & Close",
+	"Close": "Close",
+	"Select Operator": "Select Operator",
 	"Invalid date": "Invalid date",
 	"This field is required": "This field is required",
 	"{{value}} is less than the mimimum value of {{minimumNumber}}": "{{value}} is less than the mimimum value of {{minimumNumber}}",
 	"{{value}} is greater than the maximum value of {{maximumNumber}}": "{{value}} is greater than the maximum value of {{maximumNumber}}",
+	"Confirmation": "Confirmation",
 	"Are you sure you want to remove this entry?": "Are you sure you want to remove this entry?",
+	"No": "No",
 	"Yes, Remove": "Yes, Remove",
 	"other": "other",
-	"others": "others"
+	"others": "others",
+	"Are you sure you want to remove this page?": "Are you sure you want to remove this page?",
+	"Yes": "Yes",
+	"Are you sure you want to remove this field?": "Are you sure you want to remove this field?"
 }
