--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,35 +1,5 @@
 {
-	"Add Rule": "",
-	"Add Condition": "",
-	"Reorder Options": "",
-	"Edit Options": "",
-	"Edit": "",
-	"Add Option": "",
-	"Key / Value": "",
-	"Label": "",
-	"No Options Configured": "",
-	"Edit Fields": "",
-	"Reorder Fields": "",
-	"Position": "",
-	"Category": "",
-	"Type": "",
-	"Edit Field Buttons Column": "",
-	"Delete, Preview, and Edit buttons": "",
-	"Add Field": "",
-	"No Fields Configured": "",
-	"Edit Pages": "",
-	"Edit Form": "",
-	"Contains errors": "",
-	"Add Page": "",
-	"Add Token": "",
-	"Name": "",
-	"TOKEN NOT CONFIGURED": "",
-	"Submit": "",
-	"Continue": "",
-	"Revert & Close": "",
-	"Save & Close": "",
-	"Close": "",
-	"Select Operator": "",
+	"Back": "",
 	"yyyy": "",
 	"Year": "",
 	"mm": "",
@@ -38,22 +8,53 @@
 	"Day": "",
 	"Navigate to Page": "",
 	"Previous": "",
+	"Continue": "",
+	"Submit": "",
 	"Errors on page(s): {{pages}}": "",
-	"Back": "",
 	"Add": "",
+	"Contains errors": "",
 	"Remove": "",
 	"Clear Selection": "",
-	"Confirmation": "",
-	"Are you sure you want to remove this field?": "",
-	"No": "",
-	"Yes": "",
-	"Are you sure you want to remove this page?": "",
+	"Add Dependency": "",
+	"Add Rule": "",
+	"Add Condition": "",
+	"Edit Pages": "",
+	"Edit Form": "",
+	"Add Page": "",
+	"Position": "",
+	"Label": "",
+	"Reorder Options": "",
+	"Edit Options": "",
+	"Edit": "",
+	"Add Option": "",
+	"Key / Value": "",
+	"No Options Configured": "",
+	"Edit Fields": "",
+	"Reorder Fields": "",
+	"Category": "",
+	"Type": "",
+	"Edit Field Buttons Column": "",
+	"Delete, Preview, and Edit buttons": "",
+	"Add Field": "",
+	"No Fields Configured": "",
+	"Add Token": "",
+	"Name": "",
+	"TOKEN NOT CONFIGURED": "",
+	"Revert & Close": "",
+	"Save & Close": "",
+	"Close": "",
+	"Select Operator": "",
 	"Invalid date": "",
 	"This field is required": "",
 	"{{value}} is less than the mimimum value of {{minimumNumber}}": "",
 	"{{value}} is greater than the maximum value of {{maximumNumber}}": "",
+	"Confirmation": "",
 	"Are you sure you want to remove this entry?": "",
+	"No": "",
 	"Yes, Remove": "",
 	"other": "",
-	"others": ""
+	"others": "",
+	"Are you sure you want to remove this page?": "",
+	"Yes": "",
+	"Are you sure you want to remove this field?": ""
 }
