--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,6 +15,7 @@
 	"Contains errors": "",
 	"Remove": "",
 	"Clear Selection": "",
+	"Add {{label}}": "",
 	"Add Dependency": "",
 	"Add Rule": "",
 	"Add Condition": "",
