--- a/src/assets/i18n/system-en.json
+++ b/src/assets/i18n/system-en.json
@@ -15,12 +15,12 @@
 	"Contains errors": "Contains errors",
 	"Remove": "Remove",
 	"Clear Selection": "Clear Selection",
-	"Add {{label}}": "Add {{label}}",
 	"Add Dependency": "Add Dependency",
 	"Add Rule": "Add Rule",
 	"Add Condition": "Add Condition",
 	"Edit Pages": "Edit Pages",
 	"Edit Form": "Edit Form",
+	"Page contains errors": "Page contains errors",
 	"Add Page": "Add Page",
 	"Position": "Position",
 	"Label": "Label",
