--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -15,12 +15,12 @@
 	"Contains errors": "",
 	"Remove": "",
 	"Clear Selection": "",
-	"Add {{label}}": "",
 	"Add Dependency": "",
 	"Add Rule": "",
 	"Add Condition": "",
 	"Edit Pages": "",
 	"Edit Form": "",
+	"Page contains errors": "",
 	"Add Page": "",
 	"Position": "",
 	"Label": "",
